[gd_scene load_steps=8 format=3 uid="uid://r0lr0id6q0kw"]

[ext_resource type="Texture2D" uid="uid://bk1cs84anbjv" path="res://assets/world/box/carton_box_04_closed_0.jpg" id="1_6bnwv"]
[ext_resource type="Script" uid="uid://c2s6luioippuo" path="res://scripts/item_overlay.gd" id="1_6pp8d"]
[ext_resource type="Shader" uid="uid://wq4btflo30w7" path="res://shaders/negative.gdshader" id="1_48na1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6pp8d"]
shader = ExtResource("1_48na1")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bfenw"]
albedo_texture = ExtResource("1_6bnwv")

[sub_resource type="BoxMesh" id="BoxMesh_lmqf3"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_w8jie"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[node name="item_overlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_6pp8d")

[node name="item_info" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="id" type="Label" parent="item_info"]
material = SubResource("ShaderMaterial_6pp8d")
layout_mode = 0
offset_top = 768.0
offset_right = 253.0
offset_bottom = 816.0
scale = Vector2(1.8146, 1.8146)
mouse_filter = 1
theme_override_font_sizes/font_size = 29
text = "ghjkljhgfd"
horizontal_alignment = 1
vertical_alignment = 3

[node name="modifiers" type="Label" parent="item_info"]
z_index = 1
material = SubResource("ShaderMaterial_6pp8d")
layout_mode = 0
offset_top = 4.0
offset_right = 253.0
offset_bottom = 387.0
scale = Vector2(1.8146, 1.8146)
mouse_filter = 1
autowrap_mode = 3
text_overrun_behavior = 4

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
offset_right = 256.0
offset_bottom = 256.0
scale = Vector2(1.80005, 1.80005)

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.0567843, 0.628216, -0.775964, 0.605976, 0.595997, 0.52686, 0.793454, -0.500133, -0.34684, 0, 13, 0)
visible = false
light_color = Color(0.31889, 0.491401, 0.677286, 1)
light_energy = 2.883

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-0.0574767, -0.166493, 0.984366, -3.44373e-09, 0.985996, 0.166769, -0.998347, 0.00958531, -0.0566718, 0, 13, 0)
visible = false
light_color = Color(0.452574, 0.384917, 0.505313, 1)
light_energy = 3.958
shadow_bias = 0.464
shadow_blur = 10.0
directional_shadow_mode = 0
directional_shadow_max_distance = 25.0
sky_mode = 1

[node name="DirectionalLight3D3" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13, 0)
visible = false
light_color = Color(0.823777, 0.618614, 0.518154, 1)
light_energy = 1.208

[node name="item_overlay_camera" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -100, 0)
projection = 1
current = true
fov = 97.1
size = 2.5

[node name="light" type="SpotLight3D" parent="SubViewportContainer/SubViewport/item_overlay_camera"]
spot_range = 10.184
spot_attenuation = -0.64
spot_angle = 35.0

[node name="item_container" type="Node3D" parent="SubViewportContainer/SubViewport/item_overlay_camera"]
transform = Transform3D(0.707107, 2.38418e-07, 0.707106, 0.353553, 0.866025, -0.353554, -0.612372, 0.5, 0.612373, 0, 0, -6)

[node name="box" type="RigidBody3D" parent="SubViewportContainer/SubViewport" groups=["grabbable"]]
transform = Transform3D(0.707107, 2.38418e-07, 0.707106, 0.353553, 0.866025, -0.353554, -0.612372, 0.5, 0.612373, 0, 0, -6)
visible = false
gravity_scale = 0.0
freeze = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/box"]
material_override = SubResource("StandardMaterial3D_bfenw")
mesh = SubResource("BoxMesh_lmqf3")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/box"]
shape = SubResource("ConvexPolygonShape3D_w8jie")
